Add common values endpoint for data-api, include unit and integration tests, updated open api specification
