# data-api/open-api-specification.yml
@@ -31,6 +31,39 @@ paths:
           description: 'Not found'
         '500':
           description: 'Internal server error'
+  /common-values:
+    get:
+      tags:
+        - common values
+      summary: 'Get a list of common values'
+      operationId: 'getCommonValues'
+      x-spring-paginated: true
+      parameters:
+        - name: 'type'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'CONTACT_TITLE'
+        - name: 'code'
+          in: 'query'
+          schema:
+            type: 'string'
+            example: 'D'
+      responses:
+        '200':
+          description: 'Successful operation'
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/commonValueListDetails"
+        '400':
+          description: 'Bad request'
+        '401':
+          description: 'Unauthorized'
+        '404':
+          description: 'Not found'
+        '500':
+          description: 'Internal server error'
 components:
   schemas:
     officeDetails:
@@ -72,3 +105,43 @@ components:
           type: 'array'
           items:
             type: 'string'
+    commonValueDetails:
+      type: 'object'
+      properties:
+        type:
+          type: 'string'
+        code:
+          type: 'string'
+        description:
+          type: 'string'
+        start_date_active:
+          type: 'string'
+        attribute11:
+          type: 'string'
+        attribute12:
+          type: 'string'
+        enabled:
+          type: 'boolean'
+        default_code:
+          type: 'string'
+    commonValueListDetails:
+      allOf:
+        - $ref: "#/components/schemas/page"
+        - type: 'object'
+          properties:
+            content:
+              type: 'array'
+              items:
+                $ref: "#/components/schemas/commonValueDetails"
+    page:
+      type: 'object'
+      properties:
+        total_pages:
+          type: 'integer'
+        total_elements:
+          type: 'integer'
+        number:
+          type: 'integer'
+        size:
+          type: 'integer'
+
